# visual-geometry

./: .gitignore  CMakeLists.txt  README.md  visual-geometry.pc.in
include/: visual_geometry.h
src/: display.cpp  line.cpp  plot.cpp  point.cpp  visual_geometry.cpp
src/include/: plot.h
